| Summary: | ASTERISK-28150: Formatting error in documentation | ||
| Reporter: | Scott Griepentrog (sgriepentrog) | Labels: | pjsip |
| Date Opened: | 2018-11-05 15:33:40.000-0600 | Date Closed: | 2018-11-07 05:59:47.000-0600 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Documentation |
| Versions: | 16.0.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Page https://wiki.asterisk.org/wiki/display/AST/Asterisk+16+Configuration_res_pjsip in section global configuration option reference, table entry for debug has an additional extraneous column due to a formatting error:
Enable/Disable SIP debug logging. Valid options include yes no or a host address | ||
| Comments: | By: Asterisk Team (asteriskteam) 2018-11-05 15:33:42.372-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2018-11-07 05:59:48.888-0600 Change 10593 merged by Joshua Colp: res_pjsip: formatting error in documentation [https://gerrit.asterisk.org/10593|https://gerrit.asterisk.org/10593] By: Friendly Automation (friendly-automation) 2018-11-07 06:08:35.598-0600 Change 10592 merged by Joshua Colp: res_pjsip: formatting error in documentation [https://gerrit.asterisk.org/10592|https://gerrit.asterisk.org/10592] By: Friendly Automation (friendly-automation) 2018-11-07 06:08:44.962-0600 Change 10594 merged by Joshua Colp: res_pjsip: formatting error in documentation [https://gerrit.asterisk.org/10594|https://gerrit.asterisk.org/10594] | ||